cart z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -208,7 +208,7 @@ main .thumbnailImgFocus {
   gap: 2em;
   box-shadow: hsla(0deg, 0%, 0%, 0.3) 0.2em 0.7em 1em 0.8em;
   border-radius: 0.5em;
-  z-index: 999999;
+  z-index: 2;
 }
 .check-container span {
   padding: 1em 10%;
